# hyundai_amr

./: README.md
common/nif_common/include/nif_common/: types.h  vehicle_model.h
common/nif_utils/script/osm2pcd/include/pcd/: lor_full_map.osm  (+3 more)
common/tire_force_viz/src/: tire_force_viz.py
common/waypoint_viz/: CMakeLists.txt
common/waypoint_viz/launch/: deploy.launch.py
common/waypoint_viz/src/: csv_viz_tool.cpp
communication/UDP_comm/: README.md
communication/UDP_comm/hyundai_udp_client/: CMakeLists.txt  package.xml
communication/UDP_comm/hyundai_udp_client/src/: hyundai_udp_client.cpp
communication/UDP_comm/hyundai_udp_server/: CMakeLists.txt  package.xml
communication/UDP_comm/hyundai_udp_server/src/: hyundai_udp_server.cpp
control/aero_controller_nodes/: CMakeLists.txt  package.xml
control/aero_controller_nodes/include/aero_controller_nodes/: aero_controller_node.h
control/aero_controller_nodes/launch/: deploy.launch.py
control/aero_controller_nodes/src/: aero_controller_node.cpp  aero_controller_node_main.cpp
control/nif_control_joint_lqr_nodes/config/: deploy.params.yaml  pi_controller_config.yaml
control/nif_control_joint_lqr_nodes/config/lqr/: lqr_params.deploy.yaml  lqr_params.deploy_prev.yaml
control/nif_control_joint_lqr_nodes/include/nif_control_joint_lqr_nodes/: control_lqr_node.h
control/nif_control_joint_lqr_nodes/src/: control_lqr_node.cpp
control/parameter/: CMakeLists.txt  package.xml
control/parameter/launch/: parameter_launch.py
control/parameter/src/: butterworth.h  slip_angle.cpp  yaw_accel.cpp  yaw_accel_average_filter.cpp  yaw_accel_butterworth_filter.cpp  yaw_accel_combined_filter.cpp  yaw_accel_kalman_filter.cpp  yaw_accel_kalman_poly.cpp  yaw_rate_kalman_filter.cpp
control/pnd_controller_nodes/: CMakeLists.txt  package.xml
control/pnd_controller_nodes/config/: config.yaml
control/pnd_controller_nodes/include/pnd_controller_nodes/: pnd_controller_node.h
control/pnd_controller_nodes/launch/: deploy.launch.py
control/pnd_controller_nodes/src/: pnd_controller_node.cpp  pnd_controller_node_main.cpp
messages/deep_orange_msgs/: CMakeLists.txt
messages/deep_orange_msgs/msg/: BaseToCarSummary.msg  CtReport2.msg  MarelliReport.msg  MarelliSummary.msg  PtReport.msg
messages/nif_msgs/: CMakeLists.txt  README.md
messages/nif_msgs/msg/: ACTelemetryCarStatus.msg  LocalizationStatus.msg  LocalizationTest.msg  MissionStatus.msg  NodeStatus.msg  NodeStatusShort.msg  OpponentRefline.msg  PlannerStatus.msg  Qualification.msg  SystemHealthStatus.msg  TelemetryLocalization.msg  TelemetryMiscReport.msg  TelemetryPtReport.msg
messages/nif_msgs/srv/: LocalizationForcedHeading.srv  LocalizationForcedInitialize.srv
messages/novatel_oem7_msgs/: CMakeLists.txt
messages/novatel_oem7_msgs/msg/: RAWIMU.msg
messages/pnd_msgs/: CMakeLists.txt  package.xml
messages/pnd_msgs/msg/: DriveMode.msg  FourWheelDrive.msg
messages/pnd_msgs/srv/: SetDriveMode.srv
messages/vectornav_msgs/: CMakeLists.txt  package.xml
messages/vectornav_msgs/msg/: GpsGroup.msg
messages/vectornav_msgs/srv/: VnTransaction.srv
operations/: docker-compose.yml
operations/config/: cyclonedds.xml  requirements.txt  tumx_example.yaml
operations/dockerfiles/: apt-packages  autonomy.Dockerfile
operations/scripts/: entrypoint.sh  hyundai_docker_build.sh  hyundai_docker_join.sh  hyundai_docker_up.sh  tmux_example.sh
perception/nif_aw_localization_nodes/: CMakeLists.txt  package.xml
perception/nif_aw_localization_nodes/config/: config_lor.yaml  config_lvms.yaml  config_monza.yaml  config_monza_sim.yaml  config_tms.yaml
perception/nif_aw_localization_nodes/include/ekf_localizer/: nif_aw_localization_node.h
perception/nif_aw_localization_nodes/launch/: deploy.launch.py
perception/nif_aw_localization_nodes/map/: gps_error_reference_thres10.pcd
perception/nif_aw_localization_nodes/src/: nif_aw_localization_node.cpp
perception/nif_ecef_converter/: CMakeLists.txt  package.xml
perception/nif_ecef_converter/config/: config.yaml
perception/nif_ecef_converter/include/ekf_localizer/: nif_ecef_converter_node.h
perception/nif_ecef_converter/launch/: deploy.launch.py
perception/nif_ecef_converter/lib/: kalman_filter.cpp
perception/nif_ecef_converter/src/: nif_ecef_converter_node.cpp  nif_ecef_converter_nodes_main.cpp
planning/nif_dynamic_planning_nodes/: CMakeLists.txt
planning/nif_dynamic_planning_nodes/config/LOR/: planner_config.yaml  velocity_profile_config.yaml
planning/nif_dynamic_planning_nodes/config/LVMS/: planner_config.yaml  velocity_profile_config.yaml
planning/nif_dynamic_planning_nodes/config/LVMS_SIM/: planner_config.yaml  velocity_profile_config.yaml
planning/nif_dynamic_planning_nodes/config/LVMS_SIM_AC/: planner_config.yaml
planning/nif_dynamic_planning_nodes/config/MONZA/: planner_config.yaml  velocity_profile_config.yaml
planning/nif_dynamic_planning_nodes/config/MONZA_SIM/: planner_config.yaml
planning/nif_dynamic_planning_nodes/config/TMS/: planner_config.yaml  velocity_profile_config.yaml
planning/nif_dynamic_planning_nodes/include/nif_dynamic_planning_nodes/: dynamic_planning_node_pit.h
planning/nif_dynamic_planning_nodes/include/nif_dynamic_planning_nodes/velocity_profile/: velocity_profiler.hpp
planning/nif_dynamic_planning_nodes/launch/: deploy.launch.py  sim.launch.py
planning/nif_dynamic_planning_nodes/src/: dynamic_planning_node_main.cpp  dynamic_planning_node_pit.cpp
planning/nif_dynamic_planning_nodes/src/velocity_profile/: velocity_profiler.cpp
sensor/gq7_ins/ntrip_client/launch/: ntrip_client_launch.py
sensor/ouster-ros/ouster-ros/config/: driver_params.yaml
sensor/ouster-ros/ouster-ros/launch/: sensor.composite.launch.xml
tools/nif_launch/: package.xml
tools/nif_launch/config/deploy/: params_LVMS.global.yaml  params_MONZA.global.yaml  params_MONZA_SIM.global.yaml  params_TMS.global.yaml
tools/nif_launch/launch/: sim.multi.launch.py  sim.multi.udp.launch.py
tools/nif_launch/launch/deploy/: deploy.launch copy.py  deploy.launch.py  ghost.launch.py  perception.launch.py
(+5 files in other folders)
