<?xml version="1.0"?>
<package format="3">
  <name>parameter</name>
  <version>0.0.1</version>
  <description>A ROS2 package to calculate yaw acceleration and slip angles from vehicle data.</description>

  <maintainer email="hj971223@kaist.ac.kr">HJ</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
