<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pnd_controller_nodes</name>
  <version>0.1.1</version>
  <description>pnd controller nodes for the Hyundai project</description>
  <maintainer email="sw.nah@kaist.ac.kr">SungwonNah</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <!-- <test_depend>ros_testing</test_depend> -->

  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pnd_msgs</depend>
   

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
