<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nif_launch</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="usrg@todo.todo">usrg</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>nif_localization_nodes</exec_depend>
    <exec_depend>nif_aw_localization_nodes</exec_depend>
    <exec_depend>nif_aw_localization_bestgnss_nodes</exec_depend>
    <!-- <exec_depend>nif_resilient_localization_nodes</exec_depend> -->
    <!-- <exec_depend>fast_gicp</exec_depend> -->
    <!-- <exec_depend>ins_localization</exec_depend> -->
    <exec_depend>nif_waypoint_manager_nodes</exec_depend>
    <exec_depend>nif_common_nodes</exec_depend>
    <exec_depend>nif_system_status_manager_nodes</exec_depend>
    <exec_depend>nif_mission_manager_nodes</exec_depend>
    <exec_depend>nif_points_preprocessor_nodes</exec_depend>
    <exec_depend>nif_points_clustering_nodes</exec_depend>
    <exec_depend>av21_description</exec_depend>
    <exec_depend>nif_control_lqr_nodes</exec_depend>
    <exec_depend>nif_accel_control_nodes</exec_depend>
    <exec_depend>nif_control_joint_lqr_nodes</exec_depend>
    <exec_depend>nif_velocity_planning_node</exec_depend>
    <exec_depend>nif_control_safety_layer_nodes</exec_depend>
    <exec_depend>nif_lgsvl_simulation</exec_depend>
    <exec_depend>nif_ac_simulation</exec_depend>
    <exec_depend>nif_costmap_generator</exec_depend>
    <exec_depend>patchworkpp</exec_depend>
    <exec_depend>nif_polar_inverse_nodes</exec_depend>

    <exec_depend>nif_ghost_vehicle_spawner_nodes</exec_depend>
    <exec_depend>nif_opponent_prediction_nodes</exec_depend>
    <exec_depend>nif_objects_tracker_nodes</exec_depend>
    <exec_depend>nif_adaptive_cruise_control_node</exec_depend>
    <exec_depend>nif_dynamic_planning_nodes</exec_depend>
    <exec_depend>nif_radar_clustering_nodes</exec_depend>
    <exec_depend>nif_geofence_filter_nodes</exec_depend>
    <exec_depend>nif_multilayer_planning_nodes</exec_depend>
    <exec_depend>nif_detection_fusion_nodes</exec_depend>

    <exec_depend>yolov7_ros</exec_depend>
    <exec_depend>nif_lidar_camera_fusion_nodes</exec_depend>

    <exec_depend>nif_telemetry</exec_depend>
    <exec_depend>autoware_auto_msgs</exec_depend>
    <exec_depend>ssc_interface</exec_depend>
    <exec_depend>ros2_socketcan</exec_depend>
    <exec_depend>raptor_dbw_can</exec_depend>
    <exec_depend>diagnostics</exec_depend>

    <exec_depend>nif_sensors</exec_depend>
    <exec_depend>ros2_luminar</exec_depend>
    <exec_depend>waypoint_viz</exec_depend>
    <exec_depend>userinput</exec_depend>
    
    <exec_depend>fm_data</exec_depend>
    <exec_depend>nif_telemetry_lte</exec_depend>
    
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>